# kafka_a2a

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  mcp-tools.example.json  mcp-tools.prod.json  proposal.tex  pyproject.toml
JanusGraphServer/: README.md  docker-compose.cql.yml  docker-compose.yml
Neo4jServer/: Caddyfile.example  README.md  docker-compose.yml
agent_cards/: echo.agent-card.json  finance.agent-card.json  host.agent-card.json  inventory.agent-card.json  inventory_fulfillment.agent-card.json  inventory_procurement.agent-card.json  inventory_setup.agent-card.json  inventory_visibility.agent-card.json  onboarding.agent-card.json  pos.agent-card.json  pos_admin.agent-card.json  pos_live.agent-card.json  product.agent-card.json  product_catalog_admin.agent-card.json  product_discovery.agent-card.json  product_merchandising.agent-card.json  product_pricing.agent-card.json  sports.agent-card.json  users.agent-card.json  weather.agent-card.json
examples/: a2a_http_proxy.py  echo_agent.py  gateway.py  settings_demo.py
frontend/: .env.example  README.md  eslint.config.mjs  package.json
kafka/: docker-compose.yml
prompts/: host_agent.txt  inventory_agent.txt  inventory_fulfillment_agent.txt  inventory_procurement_agent.txt  inventory_setup_agent.txt  inventory_visibility_agent.txt  onboarding_agent.txt  pos_admin_agent.txt  pos_agent.txt  pos_live_agent.txt  product_agent.txt  product_catalog_admin_agent.txt  product_discovery_agent.txt  product_merchandising_agent.txt  product_pricing_agent.txt  (+1 more)
(+106 files in other folders)
